--- a/Atividades/Grammar3/index.html
+++ b/Atividades/Grammar3/index.html
@@ -40,7 +40,7 @@
   .grammar-table{width:100%;border-collapse:collapse;margin:15px 0;}
   .grammar-table th,.grammar-table td{border:1px solid #ccc;padding:8px;text-align:left;}
   .grammar-table th{background:#28a745;color:#fff;}
-.grammar-table td {background: #fff;}
+  .grammar-table td {background: #fff;}
 </style>
 </head>
 
@@ -99,96 +99,105 @@ const getPhaseFromURL=()=>new URLSearchParams(location.search).get('fase')||'1';
 function initializeAppContent(){loadTextFile();setupBackButton();updateImagePath();loadProfessorButtons();}
 
 function loadTextFile() {
-  /* --- evita recarregar e zera contadores --- */
   if (isTextFileLoaded) return;
-  totalAnswers = 0;
-  clickedAnswers = 0;
 
-  /* --- caminho dinâmico do texto --- */
   const { level, unit } = getLevelAndUnitFromURL();
   const filePath = `../../${level}/${unit}/DataGrammar3/texto.txt`;
 
   fetch(filePath)
-    .then(res => {
-      if (!res.ok) throw new Error(`Erro ${res.status} ao buscar ${filePath}`);
-      return res.text();
+    .then(r => {
+      if (!r.ok) throw new Error(`HTTP ${r.status}`);
+      return r.text();
     })
-    .then(txt => {
+    .then(text => {
       const content = document.getElementById('content');
       let html = '';
-      let inSection = false;
+      let sectionOpen = false;
       let inTable = false;
-      let isHeader = true;
+      let isHeaderRow = true;
 
-      /* ---------- varre cada linha ---------- */
-      txt.split('\n').forEach(raw => {
+      const closeTable = () => {
+        if (inTable) {
+          html += isHeaderRow ? '</table>' : '</tbody></table>';
+          inTable = false;
+          isHeaderRow = true;
+        }
+      };
+
+      const closeSection = () => {
+        closeTable();          // fecha tabela pendente (se houver)
+        if (sectionOpen) {
+          html += '</div>';    // fecha <div class="section">
+          sectionOpen = false;
+        }
+      };
+
+      text.split('\n').forEach(raw => {
         const line = raw.trim();
-        if (!line) return;                               // pula linha em branco
+        if (!line) return;                         // pula linhas vazias
 
-        /* Título principal (fora de qualquer seção) */
+        /* ---------- TÍTULO DA PÁGINA ---------- */
         if (line.startsWith('Title: ')) {
           document.getElementById('title').innerText = line.replace('Title: ', '');
           document.getElementById('title').classList.add('page-title');
           return;
         }
 
-        /* Subtítulo “## ” (aula usa para destacar partes) */
+        /* ---------- NOVA SEÇÃO (# ) ---------- */
+        if (line.startsWith('# ')) {
+          closeSection();                          // fecha a seção anterior
+          html += `<div class="section"><h2>${line.slice(2)}</h2>`;
+          sectionOpen = true;
+          return;
+        }
+
+        /* ---------- SUBTÍTULO (## ) ---------- */
         if (line.startsWith('## ')) {
           html += `<h3 class="subtitle">${line.slice(3).toUpperCase()}</h3>`;
           return;
         }
 
-        /* Linha de imagem “#IMG: nome.png” */
+        /* ---------- IMAGEM INLINE ---------- */
         if (line.startsWith('#IMG:')) {
           const img = line.split(':')[1].trim();
           const base = filePath.substring(0, filePath.lastIndexOf('/'));
-          html += `<img src="${base}/${img}" alt="${img}"
-                       onerror="this.onerror=null;this.src='${base}/../${img}'"
-                       style="max-width:100%;display:block;margin:20px auto;border-radius:8px;">`;
+          html += `<img src="${base}/${img}"
+                        onerror="this.onerror=null;this.src='${base}/../${img}'"
+                        alt="${img}"
+                        style="max-width:100%;display:block;margin:20px auto;border-radius:8px;">`;
           return;
         }
 
-        /* Início de seção “# Título” (fundo verde claro) */
-        if (line.startsWith('# ')) {
-          if (inTable) { html += '</tbody></table>'; inTable = false; }
-          if (inSection) { html += '</div>'; inSection = false; }
-
-          html += `<div class="section"><h2>${line.slice(2)}</h2>`;
-          inSection = true;
-          return;
-        }
-
-        /* Início e fim de tabela */
+        /* ---------- TABELA ---------- */
         if (line.toLowerCase() === 'tablestart') {
-          inTable = true;
-          isHeader = true;
           html += '<table class="grammar-table">';
+          inTable = true;
+          isHeaderRow = true;
           return;
         }
+
         if (line.toLowerCase() === 'tableend') {
-          if (inTable) { html += '</tbody></table>'; inTable = false; }
-          return;   // mantém a seção aberta
+          closeTable();        // mas NÃO fecha a seção!
+          return;
         }
 
-        /* Linhas internas da tabela */
         if (inTable) {
           const cols = line.split('|').map(c => c.trim());
-          if (isHeader) {
-            html += '<thead><tr>' + cols.map(c => `<th>${c}</th>`).join('') + '</tr></thead><tbody>';
-            isHeader = false;
+          if (isHeaderRow) {
+            html += `<thead><tr>${cols.map(c => `<th>${c}</th>`).join('')}</tr></thead><tbody>`;
+            isHeaderRow = false;
           } else {
-            html += '<tr>' + cols.map(c => `<td>${c}</td>`).join('') + '</tr>';
+            html += `<tr>${cols.map(c => `<td>${c}</td>`).join('')}</tr>`;
           }
           return;
         }
 
-        /* Exercícios com resposta  “[Answer: …]” */
+        /* ---------- QUESTÕES COM RESPOSTA ---------- */
         if (line.includes('[Answer:')) {
-          const [q, a]  = line.split('[Answer:');
-          const answer  = (a || '').replace(']', '').trim();
-          const qHtml   = q.replace('___',
-                            '<input type="text" class="answer-input" placeholder="Type here...">');
-          html += `<p>${qHtml}
+          const [q, a] = line.split('[Answer:');
+          const answer = a.replace(']', '').trim();
+          const question = q.replace('___', '<input type="text" class="answer-input" placeholder="Type here...">');
+          html += `<p>${question}
                      <button class="check-btn" data-answer="${answer}" onclick="checkAnswer(this)">Check</button>
                      <span class="answer" style="display:none">${answer}</span>
                    </p>`;
@@ -196,23 +205,63 @@ function loadTextFile() {
           return;
         }
 
-        /* Parágrafos normais (negrito/itálico simples) */
+        /* ---------- PARÁGRAFOS COM MARCAÇÃO ---------- */
         const formatted = line
-                            .replace(/\*\*\*(.*?)\*\*\*/g, '<b><i>$1</i></b>')
-                            .replace(/\*\*(.*?)\*\*/g, '<b>$1</b>')
-                            .replace(/\*(.*?)\*/g, '<i>$1</i>');
+          .replace(/\*\*\*(.*?)\*\*\*/g, '<b><i>$1</i></b>')
+          .replace(/\*\*(.*?)\*\*/g, '<b>$1</b>')
+          .replace(/\*(.*?)\*/g, '<i>$1</i>');
         html += `<p>${formatted}</p>`;
       });
 
-      /* Fecha o que ainda estiver aberto */
-      if (inTable)   html += '</tbody></table>';
-      if (inSection) html += '</div>';
+      /* ---------- FECHA QUALQUER SEÇÃO/TABELA PENDENTE ---------- */
+      closeSection();
 
-      /* Joga tudo na página */
       content.innerHTML = html;
       isTextFileLoaded = true;
     })
-    .catch(err => console.error('loadTextFile error:', err));
+    .catch(console.error);
+}
+
+function checkAnswer(btn){
+  const inp=btn.parentNode.querySelector('.answer-input');
+  if(inp.value.trim().toLowerCase()===btn.dataset.answer.toLowerCase()){
+    inp.style.background='lightgreen'; if(!btn.disabled){clickedAnswers++;btn.disabled=true;}
+  }else{
+    inp.style.background='lightcoral';
+    if(!btn.parentNode.querySelector('.see-answer-btn')){
+      const b=document.createElement('button');b.className='see-answer-btn';b.textContent='See Answer';
+      b.onclick=()=>{btn.nextElementSibling.style.display='inline';b.disabled=true;};
+      btn.parentNode.appendChild(b);
+    }
+  }
+  if(clickedAnswers===totalAnswers) showCompletionMessage();
+}
+
+function closeModal(){document.getElementById('completionModal').style.display='none';}
+
+function showCompletionMessage(){
+  document.getElementById('completionModal').style.display='block';
+  firebase.auth().onAuthStateChanged(u=>{if(u)updateNextPhase(u.uid);});
+}
+
+/* ---------- Progresso ---------- */
+async function updateNextPhase(userId){
+  const phase=getPhaseFromURL(), {level,unit}=getLevelAndUnitFromURL();
+  const dbRoot=firebase.database().ref(`usuarios/${userId}/progresso`);
+
+  try{
+    if(phase==='last'){
+      const nextUnit=`Unit${parseInt(unit.replace('Unit',''))+1}`;
+      await dbRoot.child(`${level}/${nextUnit}`).set({fase1:true});                /* NEW */
+    }else if(phase==='end'){
+      const nextLevel=`Level${parseInt(level.replace('Level',''))+1}`;
+      await dbRoot.child(`${nextLevel}/Unit1`).set({fase1:true});
+    }else{
+      const nextPhase=`fase${parseInt(phase)+1}`;
+      await dbRoot.child(`${level}/${unit}`).update({[`fase${phase}`]:true,[nextPhase]:true});
+    }
+    console.log('✅ Progresso atualizado.');
+  }catch(e){console.error('Erro ao atualizar progresso:',e);}
 }
 
 /* ---------- PDF ---------- */
