--- a/Atividades/Exerciciosdegramatica2/indexantigo.html
+++ b/Atividades/Exerciciosdegramatica2/indexantigo.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html>    
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -70,26 +70,13 @@
       }
 
       .answer-input {
-    padding: 5px;
-    border: 1px solid #000;
-    border-radius: 5px;
-    font-size: 1rem;
-    box-sizing: border-box;
-    resize: none;        /* evita que o usuário redimensione manualmente */
-    overflow-y: hidden;  /* evita barra de rolagem vertical */
-}
-
-/* Para <input type="text">: largura padrão */
-input.answer-input {
-    max-width: 150px;
-}
-
-/* Para <textarea>: permite largura total e crescimento automático */
-textarea.answer-input {
-    width: 100%;
-    max-width: 100%;
-    min-height: 40px;
-}
+          padding: 5px;
+          border: 1px solid #000; 
+          border-radius: 5px;
+          font-size: 1rem;
+          max-width: 150px; 
+          box-sizing: border-box; 
+      }
 
       .free-text-span {
           border-bottom: 1px solid #000; 
@@ -889,11 +876,8 @@ textarea.answer-input {
                     if (sizeVal === 'small') inputSize = '30px';
                     if (sizeVal === 'medium') inputSize = '150px';
                     if (sizeVal === 'large') inputSize = '300px';
-                    if (sizeVal === 'huge') {
-    inputSize = '800px';
-    useTextarea = true;
-}
-if (sizeVal === 'essay') useTextarea = true;
+                    if (sizeVal === 'huge') inputSize = '800px';
+                    if (sizeVal === 'essay') useTextarea = true;
                 }
                 let cleanedQ = qPart.replace(/\[size:.*?\]/,'').trim();
                 let placeholderIndex = questionObjects.length;
@@ -1091,14 +1075,6 @@ if (sizeVal === 'essay') useTextarea = true;
                 });
             }
         });
-
-    // Faz os textareas crescerem conforme o conteúdo
-    container.querySelectorAll('textarea.answer-input').forEach(textarea => {
-        textarea.addEventListener('input', () => {
-            textarea.style.height = 'auto';
-            textarea.style.height = textarea.scrollHeight + 'px';
-        });
-    });
     }
 
     //====================================================
