--- a/Atividades/Exerciciosdegramatica2/index.html
+++ b/Atividades/Exerciciosdegramatica2/index.html
@@ -69,26 +69,23 @@
           page-break-inside: avoid;
       }
 
-      .answer-input {
-    padding: 5px;
-    border: 1px solid #000;
-    border-radius: 5px;
-    font-size: 1rem;
-    box-sizing: border-box;
-    resize: none;        /* evita que o usuário redimensione manualmente */
-    overflow-y: hidden;  /* evita barra de rolagem vertical */
+     .answer-input {
+  padding: 5px;
+  border: 1px solid #000;
+  border-radius: 5px;
+  font-size: 1rem;
+  resize: none;
+  overflow: hidden;
+  width: 100%;      /* ocupa toda a linha disponível */
+  min-height: 40px; /* altura mínima mais confortável */
+  box-sizing: border-box;
 }
 
-/* Para <input type="text">: largura padrão */
-input.answer-input {
-    max-width: 150px;
-}
-
-/* Para <textarea>: permite largura total e crescimento automático */
+/* Específico para textarea (opcional, já que você só usa textarea agora) */
 textarea.answer-input {
-    width: 100%;
-    max-width: 100%;
-    min-height: 40px;
+  width: 100%;
+  max-width: 100%;
+  min-height: 40px;
 }
 
       .free-text-span {
@@ -1093,12 +1090,15 @@ if (sizeVal === 'essay') useTextarea = true;
         });
 
     // Faz os textareas crescerem conforme o conteúdo
-    container.querySelectorAll('textarea.answer-input').forEach(textarea => {
-        textarea.addEventListener('input', () => {
-            textarea.style.height = 'auto';
-            textarea.style.height = textarea.scrollHeight + 'px';
-        });
-    });
+   // Faz o textarea crescer conforme o conteúdo
+container.querySelectorAll('textarea.answer-input').forEach(textarea => {
+    const adjustHeight = () => {
+        textarea.style.height = 'auto'; // Reset para medir novamente
+        textarea.style.height = textarea.scrollHeight + 'px'; // Ajusta à altura real do conteúdo
+    };
+    textarea.addEventListener('input', adjustHeight);
+    adjustHeight(); // Executa uma vez na renderização
+});
     }
 
     //====================================================
