--- a/Atividades/Exerciciosdegramatica2/index.html
+++ b/Atividades/Exerciciosdegramatica2/index.html
@@ -69,23 +69,29 @@
           page-break-inside: avoid;
       }
 
-     .answer-input {
-  padding: 5px;
-  border: 1px solid #000;
-  border-radius: 5px;
-  font-size: 1rem;
-  resize: none;
-  overflow: hidden;
-  width: 100%;      /* ocupa toda a linha disponível */
-  min-height: 40px; /* altura mínima mais confortável */
-  box-sizing: border-box;
+    /* === CAMPOS DE RESPOSTA – <input> e <textarea> === */
+.answer-input{
+  padding:5px;
+  border:1px solid #000;
+  border-radius:5px;
+  font-size:1rem;
+
+  /* ——  limite horizontal  —— */
+  width:auto;           /* começa no “tamanho-inicial” (30-800 px)   */
+  max-width:100%;       /* nunca ultrapassa a coluna / viewport      */
+  min-width:30px;       /* não encolhe demais                        */
+
+  /* ——  crescimento vertical  —— */
+  min-height:40px;
+  resize:none;
+  overflow:hidden;
+
+  box-sizing:border-box;
 }
 
-/* Específico para textarea (opcional, já que você só usa textarea agora) */
-textarea.answer-input {
-  width: 100%;
-  max-width: 100%;
-  min-height: 40px;
+/* margem de segurança para celulares muito estreitos */
+@media (max-width:600px){
+  .answer-input{ max-width:90vw; }
 }
 
       .free-text-span {
@@ -1089,16 +1095,27 @@ if (sizeVal === 'essay') useTextarea = true;
             }
         });
 
-    // Faz os textareas crescerem conforme o conteúdo
-   // Faz o textarea crescer conforme o conteúdo
-container.querySelectorAll('textarea.answer-input').forEach(textarea => {
-    const adjustHeight = () => {
-        textarea.style.height = 'auto'; // Reset para medir novamente
-        textarea.style.height = textarea.scrollHeight + 'px'; // Ajusta à altura real do conteúdo
-    };
-    textarea.addEventListener('input', adjustHeight);
-    adjustHeight(); // Executa uma vez na renderização
+    // ---------- auto-resize largura + altura ----------
+container.querySelectorAll('input.answer-input, textarea.answer-input')
+         .forEach(field => {
+
+  const autoResize = () => {
+      /* 1) LARGURA – cresce até esbarrar no max-width */
+      field.style.width = 'auto';                    // zera para medir de novo
+      const desired = field.scrollWidth + 2;         // +2 evita jitter
+      const max     = parseFloat(getComputedStyle(field).maxWidth);
+      field.style.width = Math.min(desired, max) + 'px';
+
+      /* 2) ALTURA – acompanha o conteúdo sempre */
+      field.style.height = 'auto';
+      field.style.height = field.scrollHeight + 'px';
+  };
+
+  autoResize();                       // executa na renderização
+  field.addEventListener('input', autoResize);
+  window.addEventListener('resize', autoResize);     // reajusta ao redimensionar
 });
+
     }
 
     //====================================================
