--- a/Atividades/Exerciciosdegramatica2/index.html
+++ b/Atividades/Exerciciosdegramatica2/index.html
@@ -81,6 +81,7 @@
   min-width: 30px;
   max-width: 100%;
   min-height: 40px;
+  height: auto;
   box-sizing: border-box;
 }
 
@@ -1098,34 +1099,23 @@ if (sizeVal === 'essay') useTextarea = true;
         });
 
     // ---------- auto-resize largura + altura ----------
-container.querySelectorAll('input.answer-input, textarea.answer-input')
-         .forEach(field => {
-
+// ---------- auto-resize largura + altura ----------
+container.querySelectorAll('input.answer-input, textarea.answer-input').forEach(field => {
   const autoResize = () => {
-      /* 1) LARGURA – cresce até esbarrar no max-width */
-      field.style.width = 'auto';                    // zera para medir de novo
-      const desired = field.scrollWidth + 2;         // +2 evita jitter
-      const max     = parseFloat(getComputedStyle(field).maxWidth);
-      field.style.width = Math.min(desired, max) + 'px';
+    /* 1) LARGURA – cresce até esbarrar no max-width */
+    field.style.width = 'auto';                    // zera para medir de novo
+    const desired = field.scrollWidth + 2;         // +2 evita jitter
+    const max = parseFloat(getComputedStyle(field).maxWidth);
+    field.style.width = Math.min(desired, max) + 'px';
 
-      /* 2) ALTURA – acompanha o conteúdo sempre */
-      field.style.height = 'auto';
-      field.style.height = field.scrollHeight + 'px';
+    /* 2) ALTURA – acompanha o conteúdo sempre */
+    field.style.height = 'auto';
+    field.style.height = (field.scrollHeight) + 'px';
   };
 
   autoResize();                       // executa na renderização
   field.addEventListener('input', autoResize);
   window.addEventListener('resize', autoResize);     // reajusta ao redimensionar
-});
-
-// Faz cada campo crescer para baixo quando o texto for grande
-container.querySelectorAll('textarea.answer-input').forEach(t => {
-  const grow = () => {
-    t.style.height = 'auto';
-    t.style.height = t.scrollHeight + 'px';
-  };
-  grow(); // executa ao carregar
-  t.addEventListener('input', grow); // executa sempre que o aluno digita
 });
 
     }
