--- a/Atividades/Exerciciosdegramatica2/index - Copy.html
+++ b/Atividades/Exerciciosdegramatica2/index - Copy.html
@@ -80,19 +80,12 @@
   width: auto;
   min-width: 30px;
   max-width: 100%;
-  width: auto !important; /* Força prioridade sobre o inline */
   min-height: 40px;
   height: auto;
   box-sizing: border-box;
   vertical-align: top; 
   align-self: flex-start;
   transform: none;
-}
-
-.answer-input.size-large { width: 300px !important; 
-}
-
-.answer-input.size-huge { width: 800px !important; 
 }
 
 @media (max-width: 600px) {
@@ -217,11 +210,6 @@ textarea.answer-input {
           page-break-inside: avoid; /* Evita corte de imagem */
       }
 
-@media (max-width: 600px) {
-  .answer-input.size-huge {
-    width: 100% !important; /* Sobrescreve em mobile */
-  }
-}
       @media (max-width: 600px) {
           .container {
               padding: 10px;
@@ -922,10 +910,8 @@ if (sizeVal === 'essay') useTextarea = true;
                 // Monta a parte do input de resposta corrigida
                 htmlAccum += `<div class="exercise-line" data-question-idx="${placeholderIndex}" data-qtype="textInputWithFreeText">`;
                 if (!useTextarea) {
-    const sizeClass = sizeVal === 'large' ? 'size-large' : 
-             sizeVal === 'huge' ? 'size-huge' : '';
-    cleanedQ = cleanedQ.replace('___', `<textarea rows="1" class="answer-input ${sizeClass}"></textarea>`);
-} else {
+                    cleanedQ = cleanedQ.replace('___', `<textarea rows="1" class="answer-input" style="width:${inputSize};"></textarea>`);
+                } else {
                     cleanedQ = cleanedQ.replace('___', `<textarea rows="4" class="answer-input" style="width:100%;"></textarea>`);
                 }
                 htmlAccum += `${cleanedQ}<span class="correct-answer-span"></span></div>`;
@@ -1119,23 +1105,18 @@ if (sizeVal === 'essay') useTextarea = true;
 // ---------- auto-resize largura + altura ----------
 container.querySelectorAll('input.answer-input, textarea.answer-input').forEach(field => {
   const autoResize = () => {
-  /* ===== 1) CONTROLE DE LARGURA ===== */
-  // Não redimensiona campos com tamanhos especiais
-  if (!field.classList.contains('size-large') && 
-      !field.classList.contains('size-huge')) {
-    // Lógica original de redimensionamento
-    field.style.width = 'auto';
-    const desired = field.scrollWidth + 2;
-    const max = parseFloat(getComputedStyle(field).maxWidth);
-    field.style.width = Math.min(desired, max) + 'px';
-  }
+  /* 1) LARGURA – ajuste normal */
+  field.style.width = 'auto';
+  const desired = field.scrollWidth + 2;
+  const max = parseFloat(getComputedStyle(field).maxWidth);
+  field.style.width = Math.min(desired, max) + 'px';
 
-  /* ===== 2) CONTROLE DE ALTURA (mantido igual) ===== */
+  /* 2) ALTURA – garante crescimento para baixo */
   field.style.height = 'auto';
   const newHeight = field.scrollHeight;
   field.style.height = newHeight + 'px';
   
-  /* ===== 3) SCROLL AUTOMÁTICO (mantido igual) ===== */
+  /* 3) Rola o campo para o final (se estiver em foco) */
   if (document.activeElement === field) {
     field.scrollTop = field.scrollHeight;
   }
