--- a/Atividades/Exerciciosdegramatica2/index.html
+++ b/Atividades/Exerciciosdegramatica2/index.html
@@ -89,6 +89,17 @@
   transform: none;
 }
 
+ .answer-input.size-small {
+        width: 30px !important;
+        min-width: 30px !important;
+        max-width: 30px !important;
+}
+
+    .answer-input.size-medium {
+        width: 150px !important;
+        min-width: 150px !important;
+}
+
 .answer-input.size-large { 
   width: 300px !important; 
   min-width: 300px !important;
@@ -910,17 +921,21 @@ textarea.answer-input {
                 let sizeVal = 'medium';
 
                 let sizeMatch = qPart.match(/\[size:(.*?)\]/);
-                if (sizeMatch) {
-                    sizeVal = sizeMatch[1].trim().toLowerCase();
-                    if (sizeVal === 'small') inputSize = '30px';
-                    if (sizeVal === 'medium') inputSize = '150px';
-                    if (sizeVal === 'large') inputSize = '300px';
-                    if (sizeVal === 'huge') {
-                        inputSize = '800px';
-                        useTextarea = true;
-                    }
-                    if (sizeVal === 'essay') useTextarea = true;
-                }
+                // Na função parseFileLines, onde trata os tamanhos:
+if (sizeMatch) {
+    sizeVal = sizeMatch[1].trim().toLowerCase();
+    if (sizeVal === 'small') {
+        sizeClass = 'size-small';
+    } else if (sizeVal === 'medium') {
+        sizeClass = 'size-medium';
+    } else if (sizeVal === 'large') {
+        sizeClass = 'size-large';
+    } else if (sizeVal === 'huge') {
+        sizeClass = 'size-huge';
+        useTextarea = true;
+    }
+    if (sizeVal === 'essay') useTextarea = true;
+}
                 let cleanedQ = qPart.replace(/\[size:.*?\]/,'').trim();
                 let placeholderIndex = questionObjects.length;
 
