--- a/Atividades/Exerciciosdegramatica2/index.html
+++ b/Atividades/Exerciciosdegramatica2/index.html
@@ -1020,6 +1020,10 @@ if (line.includes('[Answer:') && !line.includes('[FreeText]')) {
 //-------------- Se não caiu em nada, é texto simples --------------
 htmlAccum += `<div class="exercise-line">${line}</div>`;
 nextLine();
+ }
+
+    return htmlAccum;
+}
 
     //====================================================
     //  (8) Render Questions
